Onboarding model updates

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,12 +1,12 @@
 {
-    "titleOnboarding01":"Title 01",
-    "textOnboarding01":"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
-    "titleOnboarding02":"Title 02",
-    "textOnboarding02":"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
-    "titleOnboarding03":"Title 03",
-    "textOnboarding03":"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
-    "titleOnboarding04":"Title 04",
-    "textOnboarding04":"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
+    "titleOnboarding01": "Creation",
+    "textOnboarding01": "Padel Arena allows verified users to create tournaments.",
+    "titleOnboarding02": "Registration",
+    "textOnboarding02": "Padel Arena allows you to register for a tournament with your partner.",
+    "titleOnboarding03": "Deletion",
+    "textOnboarding03": "Padel Arena allows the organizer user to delete tournaments.",
+    "titleOnboarding04": "Have Fun!",
+    "textOnboarding04": "Enjoy playing tournaments in your area with your partner.",
     "loginButton": "Log in / Registration",
     "skipButton": "Skip",
     "titleLogin":"Log in Page",
