--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -1,12 +1,12 @@
 {
-    "titleOnboarding01": "Título 01",
-    "textOnboarding01": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
-    "titleOnboarding02": "Título 02",
-    "textOnboarding02": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
-    "titleOnboarding03": "Título 03",
-    "textOnboarding03": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
-    "titleOnboarding04": "Título 04",
-    "textOnboarding04": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
+    "titleOnboarding01": "Creación",
+    "textOnboarding01": "Padel Arena permite crear torneos a los usuarios verificados.",
+    "titleOnboarding02": "Incripción",
+    "textOnboarding02": "Padel Arena te permite apuntarte a un torneo con tu compañero.",
+    "titleOnboarding03": "Borrado",
+    "textOnboarding03": "Padel Arena permite borrar torneos al usuario organizador.",
+    "titleOnboarding04": "¡A divertirse!",
+    "textOnboarding04": "Disfruta jugando torneos por tu zona con tu compañero.",
     "loginButton": "Iniciar sesión / Registrarse",
     "skipButton": "Omitir",
     "titleLogin": "Página de inicio de sesión",
